snl_compiler/tests/fixtures/syntax_errors/missing_semicolon_stm.snl
{错误2: 赋值语句后缺少分号}
program p
var
    integer x;
begin
    x := 1
    read(x)
end.
